--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -403,7 +403,7 @@
             slot="welcome-section_1_0"
     >
         <div class='section_content'>
-            <div class='section_content_item_0'>
+            <div class='hasAnimation section_content_item_0'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>структура компании</p>
@@ -434,127 +434,125 @@
                     </p>
                 </div>
             </div>
-            <div class='section_content_item_img-1'>
-                <!--            <img src="./this/img/sections/0/00.png"/>-->
-            </div>
-            <div class='section_content_item_1_0'>
-                <div class='section_content_header'>
-                    <p class='section_content_header_p'></p>
-                    <p class='section_content_header_p_regions'>ЕДИНАЯ ЦИФРОВАЯ ПЛАТФОРМА ДЛЯ РЕГИОНОВ РОССИИ</p>
-                    <p class='section_content_header_p'></p>
-                </div>
-                <div class='section_content_body_1_0'>
-                   <div class="diagram">
-                       <slot name="welcome-diagram-0"></slot>
-                   </div>
-                    <div class='section_content_body_ecp_marketing'>
-                        Наша компания «Цифромед» является головной
-                        компанией кластера «Медицина» ПАО Ростелеком
-                    </div>
-                </div>
-            </div>
+            <div class='section_content_item_img-1'></div>
+<!--            <div class='section_content_item_1_0'>-->
+<!--                <div class='section_content_header'>-->
+<!--                    <p class='section_content_header_p'></p>-->
+<!--                    <p class='section_content_header_p_regions'>ЕДИНАЯ ЦИФРОВАЯ ПЛАТФОРМА ДЛЯ РЕГИОНОВ РОССИИ</p>-->
+<!--                    <p class='section_content_header_p'></p>-->
+<!--                </div>-->
+<!--                <div class='section_content_body_1_0'>-->
+<!--                   <div class="diagram">-->
+<!--                       <slot name="welcome-diagram-0"></slot>-->
+<!--                   </div>-->
+<!--                    <div class='section_content_body_ecp_marketing'>-->
+<!--                        Наша компания «Цифромед» является головной-->
+<!--                        компанией кластера «Медицина» ПАО Ростелеком-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
-            <div class='section_content_item_2'>
-                <div class='section_content_header'>
-                    <p class='section_content_header_p_left'></p>
-                    <p class='section_content_header_p'>Мы занимаемся</p>
-                    <p class='section_content_header_p_right'></p>
-                </div>
-                <div class='section_content_body section_content_body_2'>
-                    <div class='section_content_body_item_2'>
-                        <div class='section_content_card'>
-                            <div class='section_content_card_top'>
-                                <div class='section_content_img'>
-                                    <img src="./this/img/sections/0/icons/00.png"/>
-                                </div>
-                                <div class='section_content_text section_content_text_1'>
-                                    ФМБА России
-                                </div>
-                            </div>
-                            <div class='section_content_card_bottom'>
-                                Автоматизацией крупнейшей сети государственных клиник ФМБА России
-                            </div>
-                        </div>
-                        <div class='section_content_card'>
-                            <div class='section_content_card_top section_2'>
-                                <div class='section_content_card_top section_2_height'>
-                                    <img src="./this/img/sections/0/icons/01.png"/>
-                                </div>
-                                <div class='section_content_text_2'>
-                                    <p class='section_content_text_2_0'>Федеральный фонд</p>
-                                    <p class='section_content_text_2_1'>Обязательного медицинского страхования</p>
-                                </div>
-                            </div>
-                            <div class='section_content_card_bottom'>
-                                Созданием и развитием подсистем и компонентов ГИС ОМС
-                            </div>
-                        </div>
-                        <div class='section_content_card'>
-                            <div class='section_content_card_top'>
-                                <img src="./this/img/sections/0/icons/02.svg"/>
-                            </div>
-                            <div class='section_content_card_bottom'>
-                                Развитием кабинета Здоровье на Портале госуслуг совместно с Минцифрой России
-                            </div>
-                        </div>
-                        <div class='section_content_card'>
-                            <div class='section_content_card_top_2'>
-                                <div class='section_content_card_top width-icon'>
-                                    <img src="./this/img/sections/0/icons/04.svg"/>
-                                </div>
-                                <div class='section_content_text section_content_text_2_2 color-white'>
-                                    ЕГИСЗ
-                                </div>
-                            </div>
-                            <div class='section_content_card_bottom'>
-                                Развитием архитектуры и технологий подсистем ЕГИСЗ для Минздрава России
-                            </div>
-                        </div>
-
-                        <div class='section_content_card'>
-                            <div class='section_content_card_top_3'>
-                                <p class='section_content_card_top_logo_3'>ЕЦК</p>
-                            </div>
-                            <div class='section_content_card_bottom'>
-                                Развитием Единого цифрового контура на базе продуктов дочерних копаний
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<!--            <div class='section_content_item_2'>-->
+<!--                <div class='section_content_header'>-->
+<!--                    <p class='section_content_header_p_left'></p>-->
+<!--                    <p class='section_content_header_p'>Мы занимаемся</p>-->
+<!--                    <p class='section_content_header_p_right'></p>-->
+<!--                </div>-->
+<!--                <div class='section_content_body section_content_body_2'>-->
+<!--                    <div class='section_content_body_item_2'>-->
+<!--                        <div class='section_content_card'>-->
+<!--                            <div class='section_content_card_top'>-->
+<!--                                <div class='section_content_img'>-->
+<!--                                    <img src="./this/img/sections/0/icons/00.png"/>-->
+<!--                                </div>-->
+<!--                                <div class='section_content_text section_content_text_1'>-->
+<!--                                    ФМБА России-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class='section_content_card_bottom'>-->
+<!--                                Автоматизацией крупнейшей сети государственных клиник ФМБА России-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class='section_content_card'>-->
+<!--                            <div class='section_content_card_top section_2'>-->
+<!--                                <div class='section_content_card_top section_2_height'>-->
+<!--                                    <img src="./this/img/sections/0/icons/01.png"/>-->
+<!--                                </div>-->
+<!--                                <div class='section_content_text_2'>-->
+<!--                                    <p class='section_content_text_2_0'>Федеральный фонд</p>-->
+<!--                                    <p class='section_content_text_2_1'>Обязательного медицинского страхования</p>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class='section_content_card_bottom'>-->
+<!--                                Созданием и развитием подсистем и компонентов ГИС ОМС-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class='section_content_card'>-->
+<!--                            <div class='section_content_card_top'>-->
+<!--                                <img src="./this/img/sections/0/icons/02.svg"/>-->
+<!--                            </div>-->
+<!--                            <div class='section_content_card_bottom'>-->
+<!--                                Развитием кабинета Здоровье на Портале госуслуг совместно с Минцифрой России-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class='section_content_card'>-->
+<!--                            <div class='section_content_card_top_2'>-->
+<!--                                <div class='section_content_card_top width-icon'>-->
+<!--                                    <img src="./this/img/sections/0/icons/04.svg"/>-->
+<!--                                </div>-->
+<!--                                <div class='section_content_text section_content_text_2_2 color-white'>-->
+<!--                                    ЕГИСЗ-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class='section_content_card_bottom'>-->
+<!--                                Развитием архитектуры и технологий подсистем ЕГИСЗ для Минздрава России-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!---->
+<!--                        <div class='section_content_card'>-->
+<!--                            <div class='section_content_card_top_3'>-->
+<!--                                <p class='section_content_card_top_logo_3'>ЕЦК</p>-->
+<!--                            </div>-->
+<!--                            <div class='section_content_card_bottom'>-->
+<!--                                Развитием Единого цифрового контура на базе продуктов дочерних копаний-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
 
-        <welcome-diagram slot="welcome-diagram-0">
-            <div class='section_content_body_ecp_1_0'>
-                <div class='section_content_body_diagram'>
-                    <div class="diagram_section_0">
-                        <img class="diagram_section_0_img" src="./this/img/diagram/section/s_0.svg"/>
-                    </div>
-                    <div class="diagram_section_1">
-                        <img class="diagram_section_0_img" src="./this/img/diagram/section/s_1.svg"/>
-                    </div>
-                    <div class="diagram_section_2">
-                        <img class="diagram_section_0_img" src="./this/img/diagram/section/s_2.svg"/>
-                    </div>
-                    <div class="diagram_section_3">
-                        <img class="diagram_section_0_img" src="./this/img/diagram/section/s_3.svg"/>
-                    </div>
-                    <div class="diagram_section_4">
-                        <img class="diagram_section_0_img" src="./this/img/diagram/section/s_4.svg"/>
-                    </div>
-                    <div class="diagram_section_5">
-                        <img class="diagram_section_0_img" src="./this/img/diagram/section/s_5.svg"/>
-                    </div>
-                </div>
-                <div class='section_content_body_ecp_list_1_0'>
-                    <h3>ЕЦП. МИС</h3>
-                    <p>медицинская</p>
-                    <p>информационная система</p>
-                    <p>цифровое решение</p>
-                    <p>для медицинских организаций</p>
-                </div>
-            </div>
-        </welcome-diagram>
+<!--        <welcome-diagram slot="welcome-diagram-0">-->
+<!--            <div class='section_content_body_ecp_1_0'>-->
+<!--                <div class='section_content_body_diagram'>-->
+<!--                    <div class="diagram_section_0">-->
+<!--                        <img class="diagram_section_0_img" src="./this/img/diagram/section/s_0.svg"/>-->
+<!--                    </div>-->
+<!--                    <div class="diagram_section_1">-->
+<!--                        <img class="diagram_section_0_img" src="./this/img/diagram/section/s_1.svg"/>-->
+<!--                    </div>-->
+<!--                    <div class="diagram_section_2">-->
+<!--                        <img class="diagram_section_0_img" src="./this/img/diagram/section/s_2.svg"/>-->
+<!--                    </div>-->
+<!--                    <div class="diagram_section_3">-->
+<!--                        <img class="diagram_section_0_img" src="./this/img/diagram/section/s_3.svg"/>-->
+<!--                    </div>-->
+<!--                    <div class="diagram_section_4">-->
+<!--                        <img class="diagram_section_0_img" src="./this/img/diagram/section/s_4.svg"/>-->
+<!--                    </div>-->
+<!--                    <div class="diagram_section_5">-->
+<!--                        <img class="diagram_section_0_img" src="./this/img/diagram/section/s_5.svg"/>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class='section_content_body_ecp_list_1_0'>-->
+<!--                    <h3>ЕЦП. МИС</h3>-->
+<!--                    <p>медицинская</p>-->
+<!--                    <p>информационная система</p>-->
+<!--                    <p>цифровое решение</p>-->
+<!--                    <p>для медицинских организаций</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </welcome-diagram>-->
     </welcome-section>
 
 
