--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -417,10 +417,6 @@
                     <p class='section_content_header_p_right'></p>
                 </div>
                 <div class='section_content_body'>
-                    <p data-delay="1500" class='section_content_body_p  has-animation animation-ltr'>
-                        Wo de Ostseewellen trecken an den Strand, wo de gäle Ginster bleught in' Dünensand, wo de Möwen
-                        schriegen grell in't Stormgebrus, dor is mine Heimat, dor bün ick tau Hus.
-                    </p>
                     <p data-delay="1800" class='section_content_body_p  has-animation animation-rtl'>
                         Наша компания разделена на Бизнес-единицы, функциональные подразделения, которые полностью
                         отвечают
@@ -500,7 +496,7 @@
             slot="welcome-section_1_0"
     >
         <div class='section_content'>
-            <div class='section_content_item_2'>
+            <div class='hasAnimation section_content_item_2'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>Мы занимаемся</p>
@@ -655,7 +651,7 @@
             slot="welcome-section_1_0"
     >
         <div class='section_content'>
-            <div class='section_content_item_0 section_height_1_1'>
+            <div class='hasAnimation section_content_item_0 section_height_1_1'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>НАШИ Ценности</p>
@@ -934,7 +930,7 @@
             slot="welcome-section_2_0"
     >
         <div class='section_content'>
-            <div class='section_content_item_0'>
+            <div class=' hasAnimation section_content_item_0'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>Обращение к коллегам</p>
@@ -981,7 +977,7 @@
             slot="welcome-section_2_0"
     >
         <div class='section_content'>
-            <div class='section_content_item_0'>
+            <div class='hasAnimation section_content_item_0'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>Лого, официальные, бланки, реквизиты</p>
@@ -1025,7 +1021,7 @@
             slot="welcome-section_2_0"
     >
         <div class='section_content'>
-            <div class='section_content_item_0'>
+            <div class='hasAnimation section_content_item_0'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>Программа рекомендаций</p>
@@ -1073,7 +1069,7 @@
             slot="welcome-section_3_0"
     >
         <div class='section_content'>
-            <div class='section_content_item_0'>
+            <div class='hasAnimation section_content_item_0'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>Почта</p>
@@ -1098,7 +1094,7 @@
             slot="welcome-section_3_0"
     >
         <div class='section_content'>
-            <div class='section_content_item_0'>
+            <div class='hasAnimation section_content_item_0'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>Принтер и сканер</p>
@@ -1122,7 +1118,7 @@
             slot="welcome-section_3_0"
     >
         <div class='section_content'>
-            <div class='section_content_item_0'>
+            <div class='hasAnimation section_content_item_0'>
                 <div class='section_content_header'>
                     <p class='section_content_header_p_left'></p>
                     <p class='section_content_header_p'>Техническое оборудование</p>
