--- a/_sandbox/welcomebook/src/component/welcome-logo/views/css/index.shadow.css
+++ b/_sandbox/welcomebook/src/component/welcome-logo/views/css/index.shadow.css
@@ -1,9 +1,11 @@
 :host {
-	position: absolute;
-	top: calc(var(--main-height) - 11vw);
-	left: 50%;
-	z-index: 10;
-	width: 1px;
+	position: fixed;
+	top: calc(var(--main-height) - 12.3vw);
+	left: 49.67%;
+	z-index: 15;
+	width: 0.05208vw;
+	opacity: 0;
+	transition: opacity 1.5s, display 1s, transform 1s;
 }
 
 :host(.slot-2) {
@@ -16,7 +18,7 @@
 	position: absolute;
 	transform: rotate(45deg);
 	display: flex;
-	border: 0.20833vw solid #d50606;
+	border: 0.20833vw solid white;
 	/*width: 116px;*/
 	/*height: 116px;*/
 	width: 3.33333vw;
@@ -28,7 +30,7 @@
 	cursor: pointer;
 	transform-origin: center center;
 	left: -1.45vw;
-
+	z-index: 15;
 }
 
 .welcome-logo:hover {
@@ -60,5 +62,5 @@
 	align-self: center;
 	transform: rotate(-45deg);
 	opacity: 0.5;
-	transition: width 1s, opacity 1s, height 1s, background-color 1s, transform 1s;
+	transition: width 1s, opacity 2s, height 1s, background-color 1s, transform 1s;
 }
