--- a/_sandbox/welcomebook/src/component/welcome-section/views/css/section.shadow.css
+++ b/_sandbox/welcomebook/src/component/welcome-section/views/css/section.shadow.css
@@ -1,14 +1,29 @@
 :host {
 	display: flex;
 	flex-direction: column;
-	min-height: 100%;
+	/*min-height: 100%;*/
 	width: 100%;
 	background-size: cover;
 	overflow: hidden;
 	margin: 0;
 	padding: 0;
-	height: 100%;
-	/*background: antiquewhite;*/
+	/*height: 100%;*/
+	/*transition:  transform 2s ease-in 0s;*/
+}
+
+.link {
+	color: var(--main-color);
+	font-family: 'Raleway', serif;
+	font-style: normal;
+	font-weight: 800;
+	font-size: 1.14583vw;
+	line-height: 1.5625vw;
+	margin: 0;
+	cursor: pointer;
+}
+
+.hasAnimation {
+	transition:  transform 0.4s linear;
 }
 
 section[class*="_children"] {
@@ -29,28 +44,101 @@ section[class*="_children"] {
 div[class*="section_content_item"] {
 	display: flex;
 	flex-direction: column;
-	/*gap: 100px;*/
+	/*background: white;*/
+	z-index: 10;
+	height: 100vh;
+}
+
+.hasAnimation section_content_item_0 {
+	/*background: white!important;*/
+	z-index: 15;
 }
 
 div[class*="content_item_img"] {
-	height: 41.66667vw;
+	height: 100vh;
 	overflow: hidden;
-	/*transition: transform 0.2s;*/
+	/*transform: translateY(-200vh);*/
+	transition:  background-position-y 5s;
+	z-index: 5;
 }
+
 
 .section_content_item_img-1 {
 	margin:0;
 	padding:0;
-	background-image:url(../../../../this/img/sections/0/00.png);
+	background-image:url(../../../../this/img/sections/1/00.png);
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 	background-size: cover;
 }
 
-.section_content_item_img-2 {
+.section_content_item_img_1_1 {
 	margin:0;
 	padding:0;
-	background-image:url(../../../../this/img/sections/0/01.png);
+	background-image:url(../../../../this/img/sections/1/01.png);
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	background-size: cover;
+}
+
+.section_content_item_img_1_2 {
+	margin:0;
+	padding:0;
+	background-image:url(../../../../this/img/sections/1/02.png);
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	background-size: cover;
+}
+
+.section_content_item_img_2_0 {
+	margin:0;
+	padding:0;
+	background-image:url(../../../../this/img/sections/2/2_0.png);
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	background-size: cover;
+}
+
+.section_content_item_img_2_1 {
+	margin:0;
+	padding:0;
+	background-image:url(../../../../this/img/sections/2/2_1.png);
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	background-size: cover;
+}
+
+.section_content_item_img_2_2 {
+	margin:0;
+	padding:0;
+	background-image:url(../../../../this/img/sections/2/2_2.png);
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	background-size: cover;
+}
+
+.section_content_item_img_3_0 {
+	margin:0;
+	padding:0;
+	background-image:url(../../../../this/img/sections/3/3_0.png);
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	background-size: cover;
+}
+
+.section_content_item_img_3_1 {
+	margin:0;
+	padding:0;
+	background-image:url(../../../../this/img/sections/3/3_1.png);
+	background-repeat:no-repeat;
+	background-attachment:fixed;
+	background-size: cover;
+}
+
+.section_content_item_img_3_2 {
+	margin:0;
+	padding:0;
+	background-image:url(../../../../this/img/sections/3/3_2.png);
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 	background-size: cover;
@@ -59,7 +147,7 @@ div[class*="content_item_img"] {
 .section_content_item_img-3 {
 	margin:0;
 	padding:0;
-	background-image:url(../../../../this/img/sections/0/02.png);
+	background-image:url(../../../../this/img/sections/1/02.png);
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 	background-size: cover;
@@ -68,7 +156,7 @@ div[class*="content_item_img"] {
 .section_content_item_img-4 {
 	margin:0;
 	padding:0;
-	background-image:url(../../../../this/img/sections/0/03.png);
+	background-image:url(../../../../this/img/sections/1/03.png);
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 	background-size: cover;
@@ -77,7 +165,7 @@ div[class*="content_item_img"] {
 .section_content_item_img-5 {
 	margin:0;
 	padding:0;
-	background-image:url(../../../../this/img/sections/0/04.png);
+	background-image:url(../../../../this/img/sections/1/04.png);
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 	background-size: cover;
@@ -86,7 +174,7 @@ div[class*="content_item_img"] {
 .section_content_item_img-6 {
 	margin:0;
 	padding:0;
-	background-image:url(../../../../this/img/sections/0/05.png);
+	background-image:url(../../../../this/img/sections/1/05.png);
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 	background-size: cover;
@@ -95,7 +183,7 @@ div[class*="content_item_img"] {
 .section_content_item_img-7 {
 	margin:0;
 	padding:0;
-	background-image:url(../../../../this/img/sections/0/06.png);
+	background-image:url(../../../../this/img/sections/1/06.png);
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 	background-size: cover;
@@ -104,7 +192,7 @@ div[class*="content_item_img"] {
 .section_content_item_img-8 {
 	margin:0;
 	padding:0;
-	background-image:url(../../../../this/img/sections/0/07.png);
+	background-image:url(../../../../this/img/sections/1/07.png);
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 	background-size: cover;
@@ -113,7 +201,7 @@ div[class*="content_item_img"] {
 .section_content_item_img-9 {
 	margin:0;
 	padding:0;
-	background-image:url(../../../../this/img/sections/0/08.png);
+	background-image:url(../../../../this/img/sections/1/08.png);
 	background-repeat:no-repeat;
 	background-attachment:fixed;
 	background-size: cover;
@@ -167,6 +255,7 @@ div[class*="content_item_1_0"] {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
+	background: white;
 }
 
 .section_content_body_2 {
@@ -510,4 +599,113 @@ h3[class*="section_content_text"] {
 	flex-direction: column;
 	justify-content: center;
 	background: red;
+}
+
+
+
+
+/*CSS ANIMATION*/
+
+div {
+	display: inline-block;
+}
+
+.bigger {
+	margin: 0;
+	font-size: 3.125vw;
+	font-weight: 800;
+	padding: 1.04167vw;
+	text-transform: uppercase;
+	color: #202020;
+	display: inline-block;
+	position: relative;
+}
+
+.text {
+	max-width: 31.25vw;
+	width: 100%;
+	line-height: 1.25vw;
+	text-align: left;
+	color: #404040;
+	padding: 1.04167vw;
+}
+.text.txt-center {
+	text-align: center;
+}
+.text a {
+	color: #0fe4d2;
+}
+
+.has-animation {
+	position: relative;
+}
+.has-animation p, .has-animation img {
+	opacity: 0;
+}
+.has-animation.animate-in p, .has-animation.animate-in img {
+	animation: textHidden 0.1s 1.1s forwards;
+}
+.has-animation.animate-in:before, .has-animation.animate-in:after {
+	content: "";
+	position: absolute;
+	top: 0;
+	right: 0;
+	height: 100%;
+	z-index: 10;
+}
+.has-animation.animate-in:before {
+	background-color: #0fe4d2;
+}
+.has-animation.animate-in:after {
+	background-color: #202020;
+	animation-delay: 0.5s;
+}
+.has-animation.animation-ltr.animate-in:before {
+	animation: revealLTR 1.8s ease;
+}
+.has-animation.animation-ltr.animate-in:after {
+	animation: revealLTR 1s 0.6s ease;
+}
+.has-animation.animation-rtl.animate-in:before {
+	animation: revealRTL 1.8s ease;
+}
+.has-animation.animation-rtl.animate-in:after {
+	animation: revealRTL 1s 0.6s ease;
+}
+
+@keyframes revealRTL {
+	0% {
+		width: 0;
+		right: 0;
+	}
+	65% {
+		width: 100%;
+		right: 0;
+	}
+	100% {
+		width: 0;
+		right: 100%;
+	}
+}
+@keyframes revealLTR {
+	0% {
+		width: 0;
+		left: 0;
+	}
+	65% {
+		width: 100%;
+		left: 0;
+	}
+	100% {
+		width: 0;
+		left: 100%;
+	}
+}
+@keyframes textHidden {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
