--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -145,6 +145,18 @@
                 <p class="square-title">больше</p>
             </div>
         </div>
+        <ul>
+            <li data-id="1_0">Структура компании</li>
+            <li data-id="1_1">Мы занимаемся</li>
+            <li data-id="1_2">Наши ценности</li>
+            <!--                            <li data-id="1_3">График работы</li>-->
+            <!--                            <li data-id="1_4">Дресс-код</li>-->
+            <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
+            <!--                            <li data-id="1_6">Зарплата</li>-->
+            <!--                            <li data-id="1_7">Отпуск</li>-->
+            <!--                            <li data-id="1_8">Обед</li>-->
+            <!--                            <li data-id="1_9">Прочие радости</li>-->
+        </ul>
     </welcome-logo>
 
 
@@ -1029,12 +1041,13 @@
                 </div>
                 <div class='section_content_body'>
                     <p class='section_content_body_p'>
-                        Сотрудники нашей компании готовы рекомендовать работу в Цифромеде своим друзьям и знакомым. Теперь ты тоже можешь это сделать. Активные вакансии можно найти на нашей странице HH.ru
+                        Сотрудники нашей компании готовы рекомендовать работу в Цифромеде своим друзьям и знакомым.
+                        Теперь ты тоже можешь это сделать. Активные вакансии можно найти на нашей странице HH.ru
                     </p>
                     <p class="link">
                         https://hh.ru/employer/4333633?hhtmFrom=vacancy.
                     </p>
-                    <p  class='section_content_body_p'>
+                    <p class='section_content_body_p'>
                         Смело отправляй их своим друзьям, либо присылай резюме в HR 😊
                     </p>
                 </div>
