--- a/public/component/api-substrate/views/css/index.shadow.css
+++ b/public/component/api-substrate/views/css/index.shadow.css
@@ -1,6 +1,7 @@
 /*@import '/components/terminal/modules/xterm/css/xterm.css';*/
-
 :host {
+    --substrate-width-min: 10vw;
+    --substrate-width-max: 14vw;
     width: 100%;
     margin: auto
 }
@@ -60,19 +61,20 @@ p {
 }
 
 .grid__header {
-    grid-template-columns: minmax(7vw, 12vw) 1fr minmax(7vw, 12vw);
+    grid-template-columns: minmax(var(--substrate-width-min), var(--substrate-width-max)) 1fr minmax(var(--substrate-width-min), var(--substrate-width-max));
     grid-template-rows: 5.9vw;
     margin-bottom: 1.46262vw;
 }
 
 .grid__body {
-    grid-template-columns: minmax(7vw, 12vw) 1fr minmax(7vw, 12vw);
+    grid-template-columns: minmax(var(--substrate-width-min), var(--substrate-width-max)) 1fr minmax(var(--substrate-width-min), var(--substrate-width-max));
     grid-template-rows: minmax(32.1vh, 1fr);
     min-height: 62.5vh;
+    overflow: hidden;
 }
 
 .grid__footer {
-    grid-template-columns: minmax(7vw, 12vw) 1fr minmax(7vw, 12vw);
+    grid-template-columns: minmax(var(--substrate-width-min), var(--substrate-width-max)) 1fr minmax(var(--substrate-width-min), var(--substrate-width-max));
     grid-template-rows: 6.2vh;
     gap: 0;
 
@@ -134,6 +136,7 @@ p {
 #relation {
     /*background: #F5F7FA;*/
     background: #1e5bb6;
+    overflow: overlay;
 }
 
 .body_main {
