--- a/_sandbox/welcomebook/src/component/fer-scroll/views/css/arrow.shadow.css
+++ b/_sandbox/welcomebook/src/component/fer-scroll/views/css/arrow.shadow.css
@@ -1,6 +1,6 @@
 :host {
 	position: fixed;
-	top: calc(var(--main-height) - 6vw);
+	top: calc(100% - 6vw);
 	left: 50%;
 	z-index: 15;
 	width: 0.05208vw;
