--- a/_sandbox/welcomebook/src/component/welcome-feedback/welcome-diagram/views/css/index.shadow.css
+++ b/_sandbox/welcomebook/src/component/welcome-feedback/welcome-diagram/views/css/index.shadow.css
@@ -1,6 +1,6 @@
 :host {
 	position: absolute;
-	top: calc(var(--main-height) - 10.5vw);
+	top: calc(100% - 10.5vw);
 	left: 50%;
 	z-index: 10;
 	width: 0.05208vw;
