--- a/_sandbox/welcomebook/src/component/welcome-section/views/css/index.shadow.css
+++ b/_sandbox/welcomebook/src/component/welcome-section/views/css/index.shadow.css
@@ -504,7 +504,7 @@ ul > li {
 }
 
 .descriptionUp2 {
-	transform: translateY(calc(var(--main-height) * -1));
+	transform: translateY(calc(100% * -1));
 	transition: transform 1.5s ease-in;
 }
 
@@ -530,7 +530,7 @@ ul > li {
 	min-width: unset;
 	z-index: 20;
 	opacity: 1;
-	bottom: calc(var(--main-height) * -1);
+	bottom: calc(100% * -1);
 	right: 0;
 	align-self: center;
 	height: 100%;
