--- a/_sandbox/welcomebook/src/this/css/index.shadow.css
+++ b/_sandbox/welcomebook/src/this/css/index.shadow.css
@@ -77,7 +77,7 @@ header, footer, article, nav, div {
 
 .parallax-container-off {
     position: absolute;
-    top: var(--main-height);
+    top: 100%;
     overflow: hidden;
     left: 0;
     width: 100%;
@@ -179,7 +179,7 @@ header, footer, article, nav, div {
         transform: scale(1) translateY(0);
     }
     to {
-        transform: scale(1) translateY(var(--main-height));
+        transform: scale(1) translateY(100%);
     }
 }
 
@@ -189,7 +189,7 @@ header, footer, article, nav, div {
         transform: scale(1) translateY(0vh);
     }
     to {
-        transform: scale(1) translateY(calc(var(--main-height) * -1));
+        transform: scale(1) translateY(calc(100% * -1));
     }
 }
 
