--- a/docs/component/api-footer/views/css/index.shadow.css
+++ b/docs/component/api-footer/views/css/index.shadow.css
@@ -8,3 +8,9 @@
     margin: 0;
     padding: 0;
 }
+
+a {
+    font-size: 1vw;
+    color: rgba(var(--colorT), var(--colorT), var(--colorT), 0.5);
+    text-decoration: none;
+}
