--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -95,7 +95,7 @@
                 <p class="square-title">больше</p>
             </div>
         </div>
-        <ul class="ltr">
+        <ol class="ltr">
             <li data-id="1_0">Структура компании</li>
             <li data-id="1_1">Мы занимаемся</li>
             <li data-id="1_2">Наши ценности</li>
@@ -106,8 +106,8 @@
             <!--                            <li data-id="1_7">Отпуск</li>-->
             <!--                            <li data-id="1_8">Обед</li>-->
             <!--                            <li data-id="1_9">Прочие радости</li>-->
-        </ul>
-        <ul class="rtl">
+        </ol>
+        <ol class="rtl">
             <li data-id="1_0">Структура компании</li>
             <li data-id="1_1">Мы занимаемся</li>
             <li data-id="1_2">Наши ценности</li>
@@ -118,7 +118,31 @@
             <!--                            <li data-id="1_7">Отпуск</li>-->
             <!--                            <li data-id="1_8">Обед</li>-->
             <!--                            <li data-id="1_9">Прочие радости</li>-->
-        </ul>
+        </ol>
+        <ol reversed class="ltr btt">
+            <li data-id="1_0">Структура компании</li>
+            <li data-id="1_1">Мы занимаемся</li>
+            <li data-id="1_2">Наши ценности</li>
+            <!--                            <li data-id="1_3">График работы</li>-->
+            <!--                            <li data-id="1_4">Дресс-код</li>-->
+            <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
+            <!--                            <li data-id="1_6">Зарплата</li>-->
+            <!--                            <li data-id="1_7">Отпуск</li>-->
+            <!--                            <li data-id="1_8">Обед</li>-->
+            <!--                            <li data-id="1_9">Прочие радости</li>-->
+        </ol>
+        <ol reversed class="rtl btt">
+            <li data-id="1_0">Структура компании</li>
+            <li data-id="1_1">Мы занимаемся</li>
+            <li data-id="1_2">Наши ценности</li>
+            <!--                            <li data-id="1_3">График работы</li>-->
+            <!--                            <li data-id="1_4">Дресс-код</li>-->
+            <!--                            <li data-id="1_5">Переговорные комнаты</li>-->
+            <!--                            <li data-id="1_6">Зарплата</li>-->
+            <!--                            <li data-id="1_7">Отпуск</li>-->
+            <!--                            <li data-id="1_8">Обед</li>-->
+            <!--                            <li data-id="1_9">Прочие радости</li>-->
+        </ol>
     </welcome-logo>
 
 
