--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -89,7 +89,9 @@
         </div>
     </welcome-header>
 
-    <welcome-logo slot="welcome-logo">
+    <welcome-logo
+            slot="welcome-logo"
+    >
         <div class="welcome-logo">
             <div class="square-buttom">
                 <p class="square-title">больше</p>
@@ -149,6 +151,7 @@
     <fer-scroll
             data-css-shadow="arrow"
             slot="fer-scroll"
+            class="index-cat"
     >
         <div class="arrow">
             <span></span>
@@ -380,7 +383,36 @@
         </div>
     </welcome-section>
 
-    <welcome-section data-id="4" slot="welcome-section-4">
+    <welcome-section
+            data-id="4"
+            slot="welcome-section-4"
+            data-css-shadow="index-cat"
+            data-css-light="index-cat"
+    >
+        <div class='parallax image-backgrorootNodeund'>
+            <img class="image-scale" src='./this/img/pg6.png'/>
+        </div>
+        <img class="image-scale opacity" src='./this/img/pg6.png'/>
+        <div class='teaser'>
+            <div class='content'>
+                <div class="description-without-background-item-2">
+                    <div class="description-page-section-2">
+                        <p class="text-offset description-about-resources">Цифро-аналоговый кот</p>
+                        <template>
+                            <ul class="text-offset description-ul-2">
+                                <li data-id="2_0">Обращение к коллегам</li>
+                                <li data-id="2_1">Лого, официальные бланки, реквизиты</li>
+                                <li data-id="2_2">Программа рекомендаций</li>
+                                <!--                            <li data-id="2_3">Корпоративные праздники</li>-->
+                            </ul>
+                        </template>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </welcome-section>
+
+    <welcome-section data-id="5" slot="welcome-section-5">
         <div class='parallax image-background'>
             <img class="image-scale" src='./this/img/pg5.png'/>
         </div>
