--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -89,6 +89,23 @@
         </div>
     </welcome-header>
 
+    <fer-scroll
+            data-css-shadow="arrow"
+            slot="fer-scroll"
+            class="index-cat"
+    >
+        <div class="arrow" data-id="top">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="arrow" data-id="bottom">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </fer-scroll>
+
     <welcome-logo
             slot="welcome-logo"
     >
@@ -133,7 +150,7 @@
             <!--                            <li data-id="1_8">Обед</li>-->
             <!--                            <li data-id="1_9">Прочие радости</li>-->
         </ol>
-        <ol reversed class="rtl btt">
+        <ol reversed class="rtl btt">[i]
             <li data-id="1_0">Структура компании</li>
             <li data-id="1_1">Мы занимаемся</li>
             <li data-id="1_2">Наши ценности</li>
@@ -146,19 +163,6 @@
             <!--                            <li data-id="1_9">Прочие радости</li>-->
         </ol>
     </welcome-logo>
-
-
-    <fer-scroll
-            data-css-shadow="arrow"
-            slot="fer-scroll"
-            class="index-cat"
-    >
-        <div class="arrow">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </fer-scroll>
 
 
     <welcome-menu slot="welcome-menu">
