--- a/template/welcomebook/index.html
+++ b/template/welcomebook/index.html
@@ -104,6 +104,16 @@
             <span></span>
             <span></span>
         </div>
+        <div class="arrow" data-id="left">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+        <div class="arrow" data-id="right">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </fer-scroll>
 
     <welcome-logo
